[gd_scene load_steps=13 format=3 uid="uid://drf82yf4ij4ea"]

[ext_resource type="Texture2D" uid="uid://cucbnuahjike3" path="res://assets/01_Sprites/01_Characters/Lous/Louise.png" id="1_0mqdn"]
[ext_resource type="Script" uid="uid://dtex2r4yey1qx" path="res://scripts/NPCs/louise.gd" id="1_g1ck0"]
[ext_resource type="Texture2D" uid="uid://cfqcrnogt5vg5" path="res://assets/01_Sprites/05_Other/talk_icon.png" id="2_g1ck0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ck0"]
atlas = ExtResource("1_0mqdn")
region = Rect2(576, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuhv6"]
atlas = ExtResource("1_0mqdn")
region = Rect2(608, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggtbx"]
atlas = ExtResource("1_0mqdn")
region = Rect2(640, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_skhnx"]
atlas = ExtResource("1_0mqdn")
region = Rect2(672, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmt1q"]
atlas = ExtResource("1_0mqdn")
region = Rect2(704, 64, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ngty"]
atlas = ExtResource("1_0mqdn")
region = Rect2(736, 64, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qis5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1ck0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuhv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggtbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skhnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmt1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ngty")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54lhc"]
size = Vector2(32, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_bfdoy"]
radius = 40.0125

[node name="Louise" type="CharacterBody2D"]
script = ExtResource("1_g1ck0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4qis5")
animation = &"Idle"
autoplay = "Idle"
frame = 5
frame_progress = 0.92357

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_54lhc")

[node name="InteractZone" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/InteractZone"]
shape = SubResource("CircleShape2D_bfdoy")

[node name="TalkIcon" type="Sprite2D" parent="."]
visible = false
z_index = 9
position = Vector2(1, -9)
texture = ExtResource("2_g1ck0")

[connection signal="body_entered" from="CollisionShape2D/InteractZone" to="." method="_on_interact_zone_body_entered"]
[connection signal="body_exited" from="CollisionShape2D/InteractZone" to="." method="_on_interact_zone_body_exited"]
